2011-10-10  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r97082.
        http://trac.webkit.org/changeset/97082
        https://bugs.webkit.org/show_bug.cgi?id=69784

        broke Windows build (Requested by smfr on #webkit).

        * WebKitTestRunner/WebKitTestRunner.xcodeproj/project.pbxproj:
        * WebKitTestRunner/cg/TestInvocationCG.cpp: Renamed from Tools/WebKitTestRunner/cg/TestInvocationCG.mm.
        (WTR::createCGContextFromImage):
        (WTR::computeMD5HashStringForContext):
        (WTR::dumpBitmap):
        (WTR::paintRepaintRectOverlay):
        (WTR::TestInvocation::dumpPixelsAndCompareWithExpected):
        * WebKitTestRunner/mac/PlatformWebViewMac.mm:
        (WTR::PlatformWebView::PlatformWebView):

2011-10-10  Simon Fraser  <simon.fraser@apple.com>

        3D transforms are flattened in WebKit2 snapshots
        https://bugs.webkit.org/show_bug.cgi?id=68276

        Reviewed by Anders Carlsson.
        
        The WKImage passed from the WebProcess when pixel dumping is created by painting compositing layers
        flattened, which flattens 3D transforms. Instead, use CGWindowListCreateImage() to get a snapshot of
        the window when doing pixel tests.
        
        Also allow the window to auto-display, so that Core Animation layers are rendered, and animate.

        * WebKitTestRunner/WebKitTestRunner.xcodeproj/project.pbxproj: TestInvocationCG became a .mm file
        * WebKitTestRunner/cg/TestInvocationCG.mm: Renamed from Tools/WebKitTestRunner/cg/TestInvocationCG.cpp.
        (WTR::createBitmapCGContext): Utility function to create a bitmap context.
        (WTR::computeMD5HashStringForContext):
        (WTR::dumpBitmap):
        (WTR::paintRepaintRectOverlay):
        (WTR::TestInvocation::dumpPixelsAndCompareWithExpected): Use CGWindowListCreateImage() to
        grap a snapshot of the window, rather than relying on the WKImage which was passed from the web process.